open external links in new tab added

--- a/src/content/docs/getting-started.mdx
+++ b/src/content/docs/getting-started.mdx
@@ -2,3 +2,4 @@
 title: Getting Started
 ---
 
+_CelestialDocs_ is a documentation theme built on top of the [Astro](https://astro.build/) framework. This guide will help you get started with a new project. 
