bug fixed and content updated

--- a/src/content/docs/Guides/index.mdx
+++ b/src/content/docs/Guides/index.mdx
@@ -3,5 +3,6 @@ title: Guides
 ---
 
 - [Breadcrumbs](/guides/breadcrumbs)
+- [Sidebar Navigation](/guides/sidebar-navigation)
 - [Site Search](/guides/site-search)
 - [Table of Contents](/guides/table-of-contents)
