--- a/src/content/docs/getting-started.mdx
+++ b/src/content/docs/getting-started.mdx
@@ -4,7 +4,7 @@ hide_breadcrumbs: true
 ---
 import Callout from "@/components/Callout.astro";
 
-_CelestialDocs_ is a documentation theme built on top of the [Astro](https://astro.build/) framework. This guide will help you get started with a new project. 
+**_Celestial Docs_** is a documentation theme built on top of the [Astro](https://astro.build/) framework. This guide will help you get started with a new project. 
 
 ## Create a new project
 
