a lot of content added

--- a/src/content/docs/Guides/breadcrumbs.mdx
+++ b/src/content/docs/Guides/breadcrumbs.mdx
@@ -22,7 +22,8 @@ export const docconfig = {
 ### Hide locally
 
 To hide ToC for specific pages only, then add `hide_breadcrumbs` in the frontmatter as `true`.
-```
+
+```yaml
 ---
 hide_breadcrumbs: true
 ---
