--- a/src/content/docs/Guides/table-of-contents.mdx
+++ b/src/content/docs/Guides/table-of-contents.mdx
@@ -28,7 +28,8 @@ export const docconfig = {
 ### Hide locally
 
 To hide ToC for specific pages only, then add `hide_toc` in the frontmatter as `true`.
-```
+
+```yaml
 ---
 hide_toc: true
 ---
