--- a/src/content/docs/getting-started.mdx
+++ b/src/content/docs/getting-started.mdx
@@ -48,4 +48,7 @@ To add new pages or sections, simply create new markdown files and folders insid
 
 ## Next Steps
 
-- **Configure:** Learn about common options in [Guides](/guides)
+- **Configure:** Learn about common options in ["Guides"](/guides).
+- **Authoring Content in Markdown:** Learn about options and features of ["Markdown"](/guides/authoring-content-in-md) guide.
+- **Components:** Discover built-in callout and more in the ["Components"](/custom-components) guide.
+- **Deploy:** Publish your work with the ["Deploy your site"](/resources/deployment) guide in the Astro docs.
