--- a/src/content/docs/Resources/deployment.mdx
+++ b/src/content/docs/Resources/deployment.mdx
@@ -1,5 +1,5 @@
 ---
-title: Deploy your Documentation
+title: Deployment
 ---
 
 Deploying your site is straightforward with CelestialDocs. This guide will help you set up deployment using GitHub Actions and configure your domain with a CNAME file. Follow the steps below to get your site live.
