--- a/src/content/docs/Custom Components/Callout.mdx
+++ b/src/content/docs/Custom Components/Callout.mdx
@@ -2,6 +2,7 @@
 title: Callout
 ---
 import Callout from "@/components/Callout.astro";
+import { Cat } from 'lucide-react';
 
 
 ## Callout
@@ -12,9 +13,11 @@ The `Callout` component is designed to highlight important information, warnings
 
 **`variant`**
 
-Type: `"info" | "warning" | "danger" | "success"`
+Type: `string`
 
 Default: "info"
+
+Options: `"info" | "warning" | "danger" | "success"`
 
 Description: Defines the type of alert to display. The variant determines the color, icon, and default title of the alert.
 
@@ -26,9 +29,18 @@ Default: Default titles based on the variant
 
 Description: Custom title for the alert. If not provided, the default title for the specified variant will be used.
 
+**`icon`**
+
+Type: `LucideIcon` (optional)
+
+Default: Default icon based on the variant
+
+Description: A custom icon to use in the alert. If not provided, the default icon for the specified variant will be used. You can look for icons at [lucide.dev](https://lucide.dev/icons/).
+
 ### Basic Usage
 To use the Callout component, import it and use it in your Astro files with the desired variant and title.
 
+
 <Callout variant="info">
   This is an info message.
 </Callout>
@@ -37,37 +49,32 @@ To use the Callout component, import it and use it in your Astro files with the 
   This is a warning message with a custom title.
 </Callout>
 
-<Callout variant="danger">
-  This is a danger message.
+<Callout variant="danger" icon={Cat}>
+  This is a danger message with a custom icon.
 </Callout>
 
-<Callout variant="success" title="Custom Success Title">
-  This is a success message with a custom title.
+<Callout variant="success" title="Custom Success Title" icon={Cat}>
+  This is a success message with a custom title and custom icon.
 </Callout>
 
-```astro
----
-import Callout from './components/Callout.astro';
----
+```mdx
+import Callout from '@/components/Callout.astro';
+import { Cat } from 'lucide-react';
 
-<!-- Using default title for info variant -->
 <Callout variant="info">
   This is an info message.
 </Callout>
 
-<!-- Using custom title for warning variant -->
 <Callout variant="warning" title="Custom Warning Title">
   This is a warning message with a custom title.
 </Callout>
 
-<!-- Using default title for danger variant -->
-<Callout variant="danger">
-  This is a danger message.
+<Callout variant="danger" icon={Cat}>
+  This is a danger message with a custom icon.
 </Callout>
 
-<!-- Using custom title for success variant -->
-<Callout variant="success" title="Custom Success Title">
-  This is a success message with a custom title.
+<Callout variant="success" title="Custom Success Title" icon={Cat}>
+  This is a success message with a custom title and custom icon.
 </Callout>
 ```
 
@@ -81,7 +88,7 @@ If no variant is provided, the info variant will be used by default. Similarly, 
 
 ```astro
 ---
-import Callout from './components/Callout.astro';
+import Callout from '@/components/Callout.astro';
 ---
 
 <!-- Using default info variant and title -->
