social added for footer

--- a/src/content/docs/Custom Components/Callout.mdx
+++ b/src/content/docs/Custom Components/Callout.mdx
@@ -11,31 +11,31 @@ The `Callout` component is designed to highlight important information, warnings
 
 ### Props
 
-**`variant`**
+- **`variant`**
 
-Type: `string`
+  Type: `string`
 
-Default: "info"
+  Default: "info"
 
-Options: `"info" | "warning" | "danger" | "success"`
+  Options: `"info" | "warning" | "danger" | "success"`
 
-Description: Defines the type of alert to display. The variant determines the color, icon, and default title of the alert.
+  Description: Defines the type of alert to display. The variant determines the color, icon, and default title of the alert.
 
-**`title`**
+- **`title`**
 
-Type: `string`
+  Type: `string`
 
-Default: Default titles based on the variant
+  Default: Default titles based on the variant
 
-Description: Custom title for the alert. If not provided, the default title for the specified variant will be used.
+  Description: Custom title for the alert. If not provided, the default title for the specified variant will be used.
 
-**`icon`**
+- **`icon`**
 
-Type: `LucideIcon` (optional)
+  Type: `LucideIcon` (optional)
 
-Default: Default icon based on the variant
+  Default: Default icon based on the variant
 
-Description: A custom icon to use in the alert. If not provided, the default icon for the specified variant will be used. You can look for icons at [lucide.dev](https://lucide.dev/icons/).
+  Description: A custom icon to use in the alert. If not provided, the default icon for the specified variant will be used. You can look for icons at [lucide.dev](https://lucide.dev/icons/).
 
 ### Basic Usage
 To use the Callout component, import it and use it in your Astro files with the desired variant and title.
