--- a/src/content/docs/Custom Components/Card.mdx
+++ b/src/content/docs/Custom Components/Card.mdx
@@ -11,38 +11,38 @@ The `Card` component is designed to present content in a styled container with s
 
 ### Props
 
-#### title
+- **`title`**
 
-Type: `string`
+  Type: `string`
 
-Description: The title text to display in the card.
+  Description: The title text to display in the card.
 
-#### icon
+- **`icon`**
 
-Type: `LucideIcon` (optional)
+  Type: `LucideIcon` (optional)
 
-Default: `Terminal`
+  Default: `Terminal`
 
-Description: A custom icon to display in the card. If not provided, the default `Terminal` icon will be used. You can look for icons at [lucide.dev](https://lucide.dev/icons/).
+  Description: A custom icon to display in the card. If not provided, the default `Terminal` icon will be used. You can look for icons at [lucide.dev](https://lucide.dev/icons/).
 
-#### color
+- **`color`**
 
-Type: `string` (optional)
+  Type: `string` (optional)
 
-Default: `"primary"`
+  Default: `"primary"`
 
-Options: 
-<span class="bg-Pink text-background p-1 border rounded text-sm font-semibold">"Pink"</span>
-<span class="bg-Purple text-background p-1 border rounded text-sm font-semibold">"Purple"</span>
-<span class="bg-Red text-background p-1 border rounded text-sm font-semibold">"Red"</span>
-<span class="bg-Orange text-background p-1 border rounded text-sm font-semibold">"Orange"</span>
-<span class="bg-Yellow text-background p-1 border rounded text-sm font-semibold">"Yellow"</span>
-<span class="bg-Green text-background p-1 border rounded text-sm font-semibold">"Green"</span>
-<span class="bg-Teal text-background p-1 border rounded text-sm font-semibold">"Teal"</span>
-<span class="bg-Sky text-background p-1 border rounded text-sm font-semibold">"Sky"</span>
-<span class="bg-Blue text-background p-1 border rounded text-sm font-semibold">"Blue"</span>
+  Options: 
+  <span class="bg-Pink text-background p-1 border rounded text-sm font-semibold">"Pink"</span>
+  <span class="bg-Purple text-background p-1 border rounded text-sm font-semibold">"Purple"</span>
+  <span class="bg-Red text-background p-1 border rounded text-sm font-semibold">"Red"</span>
+  <span class="bg-Orange text-background p-1 border rounded text-sm font-semibold">"Orange"</span>
+  <span class="bg-Yellow text-background p-1 border rounded text-sm font-semibold">"Yellow"</span>
+  <span class="bg-Green text-background p-1 border rounded text-sm font-semibold">"Green"</span>
+  <span class="bg-Teal text-background p-1 border rounded text-sm font-semibold">"Teal"</span>
+  <span class="bg-Sky text-background p-1 border rounded text-sm font-semibold">"Sky"</span>
+  <span class="bg-Blue text-background p-1 border rounded text-sm font-semibold">"Blue"</span>
 
-Description: The background color for the card. This is used for both the card's background and the button's hover state. If not provided, the default color is <span class="bg-primary text-background p-1 border rounded text-sm font-semibold">"primary"</span>.
+  Description: The background color for the card. This is used for both the card's background and the button's hover state. If not provided, the default color is <span class="bg-primary text-background p-1 border rounded text-sm font-semibold">"primary"</span>.
 
 ### Basic Usage
 
