--- a/src/content/docs/Guides/sidebar-navigation.mdx
+++ b/src/content/docs/Guides/sidebar-navigation.mdx
@@ -5,19 +5,32 @@ By default, CelestialDocs sites include sidebar navigation. It is generated afte
 
 ## Custom order
 
-By default, it will order the top-level items (folders and files that are immediately inside the `docs` folder) alphabetically. But we can provide a custom order to the top level items. 
+By default, it will order the side navigation items (folders and files) alphabetically. But we can provide a custom order to the side navigation items. 
 
 In `config.js` you can set `side_nav_menu_order` with an order of items. Mind that the type is an array of strings. Each string is just the `slug` of that page.
 
 ```js
 // config.js
 
-export const side_nav_menu_order: string[] = ["getting-started", "guides"];
-// getting-started.mdx (file)
-// guides (folder)
+export const side_nav_menu_order: string[] = [
+  "getting-started",
+  "guides",
+  "guides/pages",
+  "guides/table-of-contents",
+  "guides/sidebar-navigation",
+  "custom-components",
+  "reference",
+];
 ```
 
-You can include `folder-name`, `md` & `mdx` files. If you don't order every items, then the left out folders and files will the ordered after that. Don't add extensions for `md` & `mdx` files.
+You can include `folder-name`, `md` & `mdx` files. If you don't order every items, then the left out folders and files will the ordered after that alphabetically. Don't add extensions for `md` & `mdx` files.
+
+You can find the slug of any page, if you simply run an instance of your project and look for the path after the port number in the url. For instance, the url in my local machine for this exact page is
+```
+http://localhost:4321/guides/sidebar-navigation
+```
+
+The slug will be `guides/sidebar-navigation`. 
 
 ## Hide Sidebar Navigation
 
