--- a/src/content/docs/Reference/configuration-ref.mdx
+++ b/src/content/docs/Reference/configuration-ref.mdx
@@ -11,7 +11,7 @@ This document describes the available configuration options for your site. These
 
 - **Type**: `string`
 - **Description**: The URL of your site. Replace this with the deployed domain of your site to direct users to the correct address.
-- **Example**: `"https://hyperoot.dev"`
+- **Example**: `"https://yian1024.pages.dev"`
 
 ### `author`
 
@@ -41,7 +41,7 @@ This document describes the available configuration options for your site. These
 
 - **Type**: `string`
 - **Description**: The URL to the repository hosting the source code of your site. This provides a link to where the site's code can be found.
-- **Example**: `"https://github.com/HYP3R00T/CelestialDocs"`
+- **Example**: `"https://github.com/yian1024/CelestialDocs"`
 
 ## Locale Configuration
 
@@ -173,7 +173,7 @@ You can append the following section to your existing documentation:
     ...
     {
       name: "Github",
-      href: "https://github.com/HYP3R00T/",
+      href: "https://github.com/yian1024/",
       linkTitle: `${SITE.title} on Github`,
       active: true,
     },
