--- a/content/docs/features.mdx
+++ b/content/docs/features.mdx
@@ -14,7 +14,7 @@ CelestialDocs is a documentation starter template built with Astro and Shadcn. T
 
 - Fast static documentation via Astro content collections
 - MDX support for using React/TSX components inside docs
-- Configurable site options in `data/config.ts` (site metadata, nav, socials)
+- Configurable site options in `data/config.ts`, grouped into the system metadata (`SITE`), header toggles (`HEADER_FEATURES`), navigation helpers (`HEADER_NAV_ITEMS`, `HEADER_SOCIAL_LINKS`), the sidebar tree (`SIDEBAR_NAVIGATION`), and the right-hand Table of Contents settings (`TABLE_OF_CONTENTS`).
 - Auto-generated sidebar and hierarchical navigation
 - Search support using Pagefind
 - Theme & layout toggles (dark mode, width toggle)
@@ -24,6 +24,11 @@ CelestialDocs is a documentation starter template built with Astro and Shadcn. T
 ## Configuration
 
 Edit `data/config.ts` to control site-wide settings. Example:
+
+- `SITE` now holds the global metadata, while `HEADER_FEATURES` controls toggleable header behaviors.
+- Use `HEADER_NAV_ITEMS` to drive the header links and `HEADER_SOCIAL_LINKS` for the social buttons.
+- Adjust `SIDEBAR_NAVIGATION` when you want to change the sidebar groups or tabs.
+- Flip `TABLE_OF_CONTENTS.enableExtra` to toggle the optional markdown-driven ToC extras that appear on the right.
 
 - You can now include *top-level entries* in the sidebar configuration by placing an `Entry` object directly in the `navigation.groups` array. This lets you include single links inline between groups without creating a group for them. Example:
 
@@ -45,21 +50,31 @@ Edit `data/config.ts` to control site-wide settings. Example:
 This will render the `Quick Tour` link inline between the `Guides` and `Components` entries in the sidebar.
 
 ```ts
+// data/config.ts
 export const SITE = {
   website: "https://example.com",
   author: "Your Name",
   title: "CelestialDocs",
   description: "Documentation site",
-  // Fallback redirect path for docs index when missing
   defaultDocRedirect: "/",
-  // Header navigation
-  navItems: [
-    { href: "/docs", label: "Docs", special: true },
-  ],
-  // Social links
-  Socials: [
-    { name: "github", href: "https://github.com/you", linkTitle: "GitHub", active: true },
-  ],
+};
+
+export const HEADER_FEATURES = {
+  enableLayoutWidthToggle: true,
+  enableGitHubButton: true,
+  starCountThreshold: 5,
+};
+
+export const HEADER_NAV_ITEMS = [
+  { href: "/blog", label: "Blog" },
+];
+
+export const HEADER_SOCIAL_LINKS = [
+  { name: "github", href: "https://github.com/you", linkTitle: "GitHub", active: true },
+];
+
+export const TABLE_OF_CONTENTS = {
+  enableExtra: true,
 };
 ```
 
@@ -101,15 +116,16 @@ Pagefind assets are checked in under `public/pagefind` and `/public/_pagefind`. 
 ## Extending & Contributing
 
 - Add a new page under `content/docs/` — it will appear in the docs site automatically
-- To add a sidebar group or adjust generated navigation, edit `data/config.ts`'s `navigation` object
+- To add a sidebar group or adjust generated navigation, edit `data/config.ts`'s `SIDEBAR_NAVIGATION` object
 - Prefer `mdx` when you need interactive components, otherwise use plain `md` for static content
+- Flip `TABLE_OF_CONTENTS.enableExtra` in `data/config.ts` if you want to show or hide the extra right-hand panel items
 
 ## Examples
 
-- Add a top-level nav item in `data/config.ts`:
+- Add a top-level nav item in `data/config.ts`'s `HEADER_NAV_ITEMS`:
 
 ```ts
-export const navItems = [
+export const HEADER_NAV_ITEMS = [
   { href: "/blog", label: "Blog" },
 ];
 ```
