--- a/content/docs/configuration/basics/overview.mdx
+++ b/content/docs/configuration/basics/overview.mdx
@@ -3,6 +3,8 @@ title: "Configuration Basics Overview"
 description: "Get started configuring your documentation structure in data/config.ts"
 ---
 
+![Configuration Overview](../../assets/configuration-overview.jpg)
+
 All CelestialDocs configuration lives in one place: `data/config.ts`. This file is your command center for everything.
 
 ## The Configuration File Structure
@@ -161,7 +163,7 @@ In `SIDEBAR_NAVIGATION`, add navigation for this collection:
 ```
 
 ### Step 4: Visit Your Site
-Navigate to `http://localhost:3000/my-docs` and see your documentation!
+Navigate to `http://localhost:4321/my-docs` and see your documentation!
 
 ## Type Safety
 
@@ -225,6 +227,6 @@ groups: [
 ## Next Steps
 
 Learn to configure specific structures:
-- [Content Systems](/new-docs/configuration/basics/content-systems)
-- [Sidebar Structure](/new-docs/configuration/basics/sidebar-structure)
-- [Nested Groups Setup](/new-docs/configuration/advanced/nested-setup/single-level)
+- [Content Systems](/docs/configuration/basics/content-systems)
+- [Sidebar Structure](/docs/configuration/basics/sidebar-structure)
+- [Nested Groups Setup](/docs/configuration/advanced/nested-setup/single-level)
