--- a/content/docs/getting-started/setup.mdx
+++ b/content/docs/getting-started/setup.mdx
@@ -3,6 +3,8 @@ title: "Setup Your Environment"
 description: "Get CelestialDocs running locally and understand the project structure"
 ---
 
+![Getting Started with CelestialDocs](../assets/getting-started.jpg)
+
 Setting up CelestialDocs is straightforward. This guide walks you through the initial setup so you can start documenting.
 
 ## Prerequisites
@@ -40,7 +42,7 @@ pnpm dev
 # or: npm run dev
 ```
 
-Your documentation site will be available at `http://localhost:3000`
+Your documentation site will be available at `http://localhost:4321`
 
 ## Project Structure
 
@@ -92,7 +94,7 @@ export const SITE: SiteConfig = {
 ## What's Next?
 
 You're all set! Next, learn how to:
-1. [Create your first collection](/new-docs/getting-started/first-collection)
-2. [Add your first page](/new-docs/getting-started/first-page)
+1. [Create your first collection](/docs/getting-started/first-collection)
+2. [Add your first page](/docs/getting-started/first-page)
 
-Or explore the fundamentals in [Core Concepts](/new-docs/navigation-system/core-concepts/entries).
+Or explore the fundamentals in [Core Concepts](/docs/navigation-system/core-concepts/entries).
