--- a/content/docs/introduction.mdx
+++ b/content/docs/introduction.mdx
@@ -3,6 +3,8 @@ title: "Welcome to CelestialDocs"
 description: "Discover a powerful, flexible documentation system built with Astro that grows with your needs"
 ---
 
+![CelestialDocs Hero](./assets/code-example.jpg)
+
 CelestialDocs is a modern documentation template built on [Astro](https://astro.build) that transforms how you structure and present documentation. It's designed for teams and individuals who need sophisticated navigation without complexity.
 
 ## What Makes CelestialDocs Special?
@@ -20,7 +22,7 @@ Run multiple independent documentation systems from one codebase. Each collectio
 
 ## This Documentation
 
-This new-docs collection is specifically designed to showcase CelestialDocs' capabilities through practical examples. Every feature mentioned here is demonstrated through the site's own navigation structure:
+This docs collection is specifically designed to showcase CelestialDocs' capabilities through practical examples. Every feature mentioned here is demonstrated through the site's own navigation structure:
 
 - **Foundation**: Essential concepts explained clearly
 - **Getting Started**: Set up your first collection
@@ -48,10 +50,10 @@ This new-docs collection is specifically designed to showcase CelestialDocs' cap
 
 ## Ready to Explore?
 
-Start with [Getting Started](/new-docs/getting-started/setup) to set up your first collection, or jump into the [Navigation System](/new-docs/navigation-system/core-concepts/entries) to understand the fundamentals.
+Start with [Getting Started](/docs/getting-started/setup) to set up your first collection, or jump into the [Navigation System](/docs/navigation-system/core-concepts/entries) to understand the fundamentals.
 
 ---
 
 **Next Steps:**
-- Head to [Why CelestialDocs](/new-docs/why-celestialdocs) for a detailed comparison
-- Or dive into [Getting Started](/new-docs/getting-started/setup) to begin building
+- Head to [Why CelestialDocs](/docs/why-celestialdocs) for a detailed comparison
+- Or dive into [Getting Started](/docs/getting-started/setup) to begin building
