--- a/content/docs/navigation-system/hierarchy/three-tier-overview.mdx
+++ b/content/docs/navigation-system/hierarchy/three-tier-overview.mdx
@@ -3,6 +3,8 @@ title: "Three-Tier Hierarchy Overview"
 description: "A visual guide to understanding how entries, groups, and tabs create the navigation hierarchy"
 ---
 
+![Navigation Hierarchy Concept](../../assets/navigation-hierarchy.jpg)
+
 CelestialDocs uses a clean three-tier system to organize content. Understanding this structure is key to building effective documentation.
 
 ## The Three Tiers
@@ -236,8 +238,8 @@ The three-tier system scales beautifully:
 ## Next Steps
 
 Now understand the visual representation:
-- [Visual Guide](/new-docs/navigation-system/hierarchy/visual-guide)
-- [Real-World Examples](/new-docs/navigation-system/hierarchy/real-world-examples)
+- [Visual Guide](/docs/navigation-system/hierarchy/visual-guide)
+- [Real-World Examples](/docs/navigation-system/hierarchy/real-world-examples)
 
 Or learn to configure:
-- [Configuration Basics](/new-docs/configuration/basics/sidebar-structure)
+- [Configuration Basics](/docs/configuration/basics/sidebar-structure)
