style(docs): standardize arrow notation in documentation

--- a/content/docs/advanced-topics/multiple-collections/setup.mdx
+++ b/content/docs/advanced-topics/multiple-collections/setup.mdx
@@ -83,17 +83,17 @@ Create markdown files in each collection folder. They'll automatically be discov
 A typical multi-collection setup:
 
 ```
-docs/                    → /docs/*
+docs/                    -> /docs/*
 ├── getting-started/
 ├── features/
 └── help/
 
-api/                     → /api/*
+api/                     -> /api/*
 ├── v1/
 ├── v2/
 └── authentication/
 
-guides/                  → /guides/*
+guides/                  -> /guides/*
 ├── tutorials/
 ├── patterns/
 └── examples/
