--- a/content/docs/advanced-topics/multiple-collections/use-cases.mdx
+++ b/content/docs/advanced-topics/multiple-collections/use-cases.mdx
@@ -36,9 +36,9 @@ api collection (/api)
 **Solution:** Three collections, three separate navigation systems.
 
 ```
-/product-a/  →  Standalone docs site
-/product-b/  →  Standalone docs site
-/product-c/  →  Standalone docs site
+/product-a/  ->  Standalone docs site
+/product-b/  ->  Standalone docs site
+/product-c/  ->  Standalone docs site
 ```
 
 Each product team:
