--- a/content/docs/advanced-topics/selling-points/hierarchical-power.mdx
+++ b/content/docs/advanced-topics/selling-points/hierarchical-power.mdx
@@ -3,7 +3,7 @@ title: "Hierarchical Navigation Power"
 description: "Why CelestialDocs' three-tier hierarchy scales from simple to enterprise"
 ---
 
-CelestialDocs' three-tier hierarchy (Entries → Groups → Tabs) is specifically designed to scale documentation from tiny to enterprise-scale without requiring deep nesting or complexity.
+CelestialDocs' three-tier hierarchy (Entries -> Groups -> Tabs) is specifically designed to scale documentation from tiny to enterprise-scale without requiring deep nesting or complexity.
 
 ## The Hierarchy Advantage
 
@@ -154,7 +154,7 @@ sidebar:
 
 ✅ **Clarity**
 ```
-Clear structure: Docs → Guides → Advanced Topics → Troubleshooting
+Clear structure: Docs -> Guides -> Advanced Topics -> Troubleshooting
 vs.
 "Where does this page go?"
 ```
