--- a/content/docs/advanced-topics/selling-points/hybrid-flexibility.mdx
+++ b/content/docs/advanced-topics/selling-points/hybrid-flexibility.mdx
@@ -22,8 +22,8 @@ Result: Appears alphabetically between "Accounting" and "Dashboard"
 ```
 Scenario: Team member adds "deployment-guide.md"
 Result: Page exists but doesn't appear in sidebar
-        Forgotten in config → users can't find it
-        → months pass before someone notices
+        Forgotten in config -> users can't find it
+        -> months pass before someone notices
 ```
 
 ## CelestialDocs Solution: Hybrid
