--- a/content/docs/configuration/advanced/nested-setup/best-practices.mdx
+++ b/content/docs/configuration/advanced/nested-setup/best-practices.mdx
@@ -40,10 +40,10 @@ groups: [
 // File system (must match)
 content/docs/
 ├─ core/
-│  ├─ auth/              ← matches config
+│  ├─ auth/              <- matches config
 │  │  ├─ overview.md
 │  │  └─ setup.md
-│  └─ data/              ← matches config
+│  └─ data/              <- matches config
 │     ├─ overview.md
 │     └─ schemas.md
 ```
@@ -211,7 +211,7 @@ Learning Path
 
 **Use when:**
 - Content has skill progression
-- Want to guide users from beginner → advanced
+- Want to guide users from beginner -> advanced
 - Different sections for different expertise levels
 
 ## Common Mistakes to Avoid
