--- a/content/docs/configuration/advanced/nested-setup/multi-level.mdx
+++ b/content/docs/configuration/advanced/nested-setup/multi-level.mdx
@@ -103,34 +103,34 @@ Folder structure mirrors navigation depth:
 
 ```
 content/platform/
-└── platform-suite/                 ← Level 1
-    ├── core-services/              ← Level 2
-    │   ├── authentication/          ← Level 3
-    │   │   ├── oauth/               ← Level 4
+└── platform-suite/                 <- Level 1
+    ├── core-services/              <- Level 2
+    │   ├── authentication/          <- Level 3
+    │   │   ├── oauth/               <- Level 4
     │   │   │   ├── getting-started.md
     │   │   │   ├── setup.md
     │   │   │   ├── troubleshooting.md
     │   │   │   └── examples.md
-    │   │   └── saml/                ← Level 4
+    │   │   └── saml/                <- Level 4
     │   │       ├── overview.md
     │   │       ├── integration.md
     │   │       └── federation.md
-    │   └── data-storage/            ← Level 3
-    │       ├── databases/           ← Level 4
+    │   └── data-storage/            <- Level 3
+    │       ├── databases/           <- Level 4
     │       │   ├── postgresql.md
     │       │   ├── mongodb.md
     │       │   └── performance.md
-    │       └── caching/             ← Level 4
+    │       └── caching/             <- Level 4
     │           ├── redis.md
     │           ├── memcached.md
     │           └── strategies.md
-    └── integrations/                ← Level 2
-        └── third-party/             ← Level 3
-            ├── payments/            ← Level 4
+    └── integrations/                <- Level 2
+        └── third-party/             <- Level 3
+            ├── payments/            <- Level 4
             │   ├── stripe.md
             │   ├── paypal.md
             │   └── webhook-handling.md
-            └── analytics/           ← Level 4
+            └── analytics/           <- Level 4
                 ├── google-analytics.md
                 ├── mixpanel.md
                 └── event-tracking.md
