--- a/content/docs/configuration/advanced/tab-management/grouping-tabs.mdx
+++ b/content/docs/configuration/advanced/tab-management/grouping-tabs.mdx
@@ -55,7 +55,7 @@ export const SIDEBAR_NAVIGATION = {
             label: "Getting Started",
             icon: "🚀",
         },
-        tabGroups: [  // ← Group tabs
+        tabGroups: [  // <- Group tabs
             {
                 id: "user-paths",
                 label: "User Paths",
@@ -204,12 +204,12 @@ Switching tabs (any group) updates entire sidebar.
 tabGroups: [
     {
         id: "group1",
-        label: "",  // ← No label shown
+        label: "",  // <- No label shown
         tabs: [...]
     },
     {
         id: "group2",
-        label: "",  // ← Visual space, no text
+        label: "",  // <- Visual space, no text
         tabs: [...]
     },
 ]
@@ -223,7 +223,7 @@ Tabs have visual separation but no labels.
 tabGroups: [
     {
         id: "getting-started-group",
-        label: "Getting Started",  // ← Shown as header
+        label: "Getting Started",  // <- Shown as header
         tabs: [
             { id: "quickstart", label: "Quick Start", ... },
             { id: "tutorials", label: "Tutorials", ... },
@@ -231,7 +231,7 @@ tabGroups: [
     },
     {
         id: "reference-group",
-        label: "Reference",  // ← Shown as header
+        label: "Reference",  // <- Shown as header
         tabs: [
             { id: "api", label: "API", ... },
             { id: "config", label: "Config", ... },
