--- a/content/docs/configuration/advanced/tab-management/organization-patterns.mdx
+++ b/content/docs/configuration/advanced/tab-management/organization-patterns.mdx
@@ -35,7 +35,7 @@ Used by: Enterprise platforms, complex products
 
 ```
 Center Hub (Default):
-[Getting Started] ← Default landing
+[Getting Started] <- Default landing
 
 Spoke 1: [Product A] [Features] [API]
 Spoke 2: [Product B] [Features] [API]
@@ -135,7 +135,7 @@ tabGroups: [
 
 **Use when:**
 - Documentation spans skill levels
-- Clear progression: basic → intermediate → advanced
+- Clear progression: basic -> intermediate -> advanced
 - Audience skips sections based on expertise
 
 ## Pattern 4: Audience-Centric
