--- a/content/docs/configuration/basics/content-systems.mdx
+++ b/content/docs/configuration/basics/content-systems.mdx
@@ -136,15 +136,15 @@ export const SIDEBAR_NAVIGATION: SidebarNavigation = {
 
 ```
 content/
-├── docs/                    ← System 1: "docs"
+├── docs/                    <- System 1: "docs"
 │   ├── getting-started/
 │   ├── features/
 │   └── help/
-├── api/                     ← System 2: "api"
+├── api/                     <- System 2: "api"
 │   ├── authentication/
 │   ├── endpoints/
 │   └── webhooks/
-└── guides/                  ← System 3: "guides"
+└── guides/                  <- System 3: "guides"
     ├── tutorials/
     ├── patterns/
     └── examples/
