--- a/content/docs/content/frontmatter/overview.mdx
+++ b/content/docs/content/frontmatter/overview.mdx
@@ -35,7 +35,7 @@ Override the sidebar label (if different from title).
 ```yaml
 ---
 title: "Installation and Configuration"
-navLabel: "Install"  ← Sidebar shows this instead
+navLabel: "Install"  <- Sidebar shows this instead
 ---
 ```
 
@@ -44,7 +44,7 @@ Add an icon in the sidebar next to the entry.
 
 ```yaml
 ---
-navIcon: "⚡"  ← Emoji
+navIcon: "⚡"  <- Emoji
 ---
 ```
 
@@ -52,7 +52,7 @@ or
 
 ```yaml
 ---
-navIcon: "document"  ← SVG reference
+navIcon: "document"  <- SVG reference
 ---
 ```
 
@@ -74,7 +74,7 @@ Exclude from production builds.
 
 ```yaml
 ---
-draft: true  ← Skipped in build
+draft: true  <- Skipped in build
 ---
 ```
 
