--- a/content/docs/navigation-system/core-concepts/entries.mdx
+++ b/content/docs/navigation-system/core-concepts/entries.mdx
@@ -79,7 +79,7 @@ Full URL:          /docs/getting-started/installation
 
 - Slug is the relative path from the collection folder
 - File extension (.md, .mdx) is removed
-- Kebab-case is standard for folders: `my-guide/` → `/my-guide/`
+- Kebab-case is standard for folders: `my-guide/` -> `/my-guide/`
 
 ## Example: A Complete Entry
 
@@ -112,11 +112,11 @@ Entries appear in the sidebar as clickable links. They're always leaf nodes—yo
 ```
 Sidebar
 ├── Group 1
-│   ├── Entry: Installation     ← clickable link
-│   └── Entry: Configuration    ← clickable link
+│   ├── Entry: Installation     <- clickable link
+│   └── Entry: Configuration    <- clickable link
 ├── Group 2
-│   └── Entry: Advanced Setup   ← clickable link
-└── Orphan Entry: FAQ           ← entry without a group
+│   └── Entry: Advanced Setup   <- clickable link
+└── Orphan Entry: FAQ           <- entry without a group
 ```
 
 ## Entry Discovery
