--- a/content/docs/navigation-system/core-concepts/nested-groups.mdx
+++ b/content/docs/navigation-system/core-concepts/nested-groups.mdx
@@ -220,7 +220,7 @@ Navigation System (Tab)
 ├── Core Concepts (Group)
 │   ├── Entries
 │   ├── Groups
-│   ├── Nested Groups       ← You're reading this!
+│   ├── Nested Groups       <- You're reading this!
 │   └── Tabs
 ├── Hierarchy (Group)
 │   ├── Three-Tier Overview
