--- a/content/docs/navigation-system/hierarchy/visual-guide.mdx
+++ b/content/docs/navigation-system/hierarchy/visual-guide.mdx
@@ -293,10 +293,10 @@ Home > Docs > Getting Started > Installation
 ```
 
 All except the current page are clickable:
-- **Home** → `/docs/`
-- **Docs** → `/docs/`
-- **Getting Started** → `/docs/getting-started/`
-- **Installation** → (current page, not clickable)
+- **Home** -> `/docs/`
+- **Docs** -> `/docs/`
+- **Getting Started** -> `/docs/getting-started/`
+- **Installation** -> (current page, not clickable)
 
 ---
 
