--- a/content/docs/generation-strategies/auto-generation/when-to-use.mdx
+++ b/content/docs/generation-strategies/auto-generation/when-to-use.mdx
@@ -134,11 +134,11 @@ You only want certain files in navigation.
 ```
 content/guides/
 ├── published/
-│   ├── getting-started.md  ← Should appear
-│   ├── setup.md            ← Should appear
+│   ├── getting-started.md  <- Should appear
+│   ├── setup.md            <- Should appear
 ├── drafts/
-│   ├── wip-new-feature.md  ← Shouldn't appear
-│   └── coming-soon.md      ← Shouldn't appear
+│   ├── wip-new-feature.md  <- Shouldn't appear
+│   └── coming-soon.md      <- Shouldn't appear
 ```
 
 **Solution:** Manual configuration
@@ -197,7 +197,7 @@ content/
 ├── internal/
 │   ├── roadmap.md
 │   ├── meeting-notes.md
-│   └── TODO.md  ← Should NOT appear publicly
+│   └── TODO.md  <- Should NOT appear publicly
 ```
 
 **Problem:** Auto-gen on root would show internal docs
